# sudoku

./: meson.build
src/: backtracking.c  backtracking.h  constraints.c  constraints.h  main.c  sudoku.c  sudoku.h
src/solver/: internals.h  last_remaining.c  single_occurence.c  slice_and_dice.c  solve.c  solve.h  update_sets.c
